# wg-ldap

./: .gitignore  README.md  main.py  pyproject.toml
wg_ldap/: __init__.py  cli.py  config.py  index.html  ipam.py  ldap_sync.py  nftables.py  utils.py  web.py  wireguard.py
