[project]
dependencies = [
  "pydantic>=2.11.10",
  "pynacl>=1.6.0",
  "python-ldap>=3.4.4",
  "tomli>=2.2.1",
]
description = "Manage Wireguard peers and routes using LDAP as a backend"
name = "wg-ldap"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.uv]
package = true

[project.scripts]
wg-ldap = "wg_ldap.cli:main"
wg-ldap-web = "wg_ldap.web:serve"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "ruff>=0.13.3",
]
